{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 28,
  "lineage": "7100dfa1-494b-e5a0-d5ad-dd8ab89063cd",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6c2e8300-c97c-4c39-aed0-ac808aecfdf0/resourceGroups/Multi-container/providers/Microsoft.Network/networkInterfaces/nic",
            "internal_domain_name_suffix": "w4kyj11jsmsevh1z3ekb3uleqg.gvxx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6c2e8300-c97c-4c39-aed0-ac808aecfdf0/resourceGroups/Multi-container/providers/Microsoft.Network/publicIPAddresses/Multi-container-ip",
                "subnet_id": "/subscriptions/6c2e8300-c97c-4c39-aed0-ac808aecfdf0/resourceGroups/Multi-container/providers/Microsoft.Network/virtualNetworks/Multi-container-network/subnets/Multi-container-subnet"
              }
            ],
            "location": "swedencentral",
            "mac_address": "38-33-C5-D2-BB-82",
            "name": "nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "Multi-container",
            "tags": {
              "environment": "dev",
              "owner": "yassine",
              "source": "Terraform"
            },
            "virtual_machine_id": "/subscriptions/6c2e8300-c97c-4c39-aed0-ac808aecfdf0/resourceGroups/Multi-container/providers/Microsoft.Compute/virtualMachines/Multy-continer-vm"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6c2e8300-c97c-4c39-aed0-ac808aecfdf0/resourceGroups/Multi-container/providers/Microsoft.Network/networkSecurityGroups/Multi-container-sg",
            "location": "swedencentral",
            "name": "Multi-container-sg",
            "resource_group_name": "Multi-container",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Multi-container-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "197.230.240.146/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev",
              "owner": "yassine",
              "source": "Terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6c2e8300-c97c-4c39-aed0-ac808aecfdf0/resourceGroups/Multi-container/providers/Microsoft.Network/networkSecurityGroups/Multi-container-sg/securityRules/Multi-container-rule",
            "name": "Multi-container-rule",
            "network_security_group_name": "Multi-container-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "Multi-container",
            "source_address_prefix": "197.230.240.146/32",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.sg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/6c2e8300-c97c-4c39-aed0-ac808aecfdf0/resourceGroups/Multi-container/providers/Microsoft.Network/publicIPAddresses/Multi-container-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.165.172.153",
            "ip_version": "IPv4",
            "location": "swedencentral",
            "name": "Multi-container-ip",
            "resource_group_name": "Multi-container",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev",
              "owner": "yassine",
              "source": "Terraform"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.123.1.0/24",
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6c2e8300-c97c-4c39-aed0-ac808aecfdf0/resourceGroups/Multi-container/providers/Microsoft.Network/virtualNetworks/Multi-container-network/subnets/Multi-container-subnet",
            "name": "Multi-container-subnet",
            "resource_group_name": "Multi-container",
            "virtual_network_name": "Multi-container-network"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6c2e8300-c97c-4c39-aed0-ac808aecfdf0/resourceGroups/Multi-container/providers/Microsoft.Network/virtualNetworks/Multi-container-network/subnets/Multi-container-subnet",
            "network_security_group_id": "/subscriptions/6c2e8300-c97c-4c39-aed0-ac808aecfdf0/resourceGroups/Multi-container/providers/Microsoft.Network/networkSecurityGroups/Multi-container-sg",
            "subnet_id": "/subscriptions/6c2e8300-c97c-4c39-aed0-ac808aecfdf0/resourceGroups/Multi-container/providers/Microsoft.Network/virtualNetworks/Multi-container-network/subnets/Multi-container-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.sg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ef8495b7-9369-4a24-9f79-e9141ed16486",
            "id": "/subscriptions/6c2e8300-c97c-4c39-aed0-ac808aecfdf0/resourceGroups/Multi-container/providers/Microsoft.Network/virtualNetworks/Multi-container-network",
            "location": "swedencentral",
            "name": "Multi-container-network",
            "resource_group_name": "Multi-container",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/6c2e8300-c97c-4c39-aed0-ac808aecfdf0/resourceGroups/Multi-container/providers/Microsoft.Network/virtualNetworks/Multi-container-network/subnets/Multi-container-subnet",
                "name": "Multi-container-subnet",
                "security_group": "/subscriptions/6c2e8300-c97c-4c39-aed0-ac808aecfdf0/resourceGroups/Multi-container/providers/Microsoft.Network/networkSecurityGroups/Multi-container-sg"
              }
            ],
            "tags": {
              "environment": "dev",
              "owner": "yassine",
              "source": "Terraform"
            },
            "vm_protection_enabled": false
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}